# video-translator

./: .gitignore  LICENSE  README.md  config.env.example  pyproject.toml
.claude/skills/video-translator/: SKILL.md
scripts/: asr_mlx.py  diarize.py  fix_translations.py  gender.py  hebrew_gender.py  hebrew_pronunciation.py  mix.py  mix_window.py  refs.py  reuse_11labs.py  review_translations.py  run_full.py  transcribe.py  translate.py  translate_ollama.py  translate_remote.py  tts.py  tts_elevenlabs.py  tts_mlx.py  upscale.py  vt_config.py
skill/: SKILL.md
