[project]
name = "video-translator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "demucs>=4.0.1",
    "dicta-onnx>=1.0.9",
    "faster-whisper>=1.2.1",
    "llvmlite>=0.42",
    "numba>=0.59",
    "pyannote-audio>=3.4.0",
    "soundfile>=0.14.0",
    "speechbrain>=1.1.0",
]
